src/objects/FSTR__Step_Event__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__Event_Subtype_Name__c</fullName>
        <label>Event Subtype Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Event_Subtype__c</fullName>
        <label>Event Subtype</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Event_Type_Name__c</fullName>
        <label>Event Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Event_Type__c</fullName>
        <label>Event Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step__c</fullName>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Step Events</relationshipLabel>
        <relationshipName>Step_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Step Event</label>
    <nameField>
        <displayFormat>SE{000000}</displayFormat>
        <label>Step Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>